Ch19 - adds password validation

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -9,11 +9,15 @@
   </label>
   <label for="email">
     Email:
-    <input type="email" name="email" value="enter email" />
+    <input type="email" name="email" />
   </label>
   <label for="password">
     Password:
-    <input type="password" name="password" value="enter password" />
+    <input type="password" name="password" />
+  </label>
+  <label for="password_confirmation">
+    Confirm Password:
+    <input type="password" name="password_confirmation" />
   </label>
   <input type="submit" name="sumbit" value="Signup">
 </form>
