--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,6 +1,3 @@
-
-
-
 <form class="" action="/users" method="POST">
   <label for="first_name">
     First Name:
@@ -12,7 +9,7 @@
   </label>
   <label for="email">
     Email:
-    <input type="email" name="email" value= "<%= @email %>" />
+    <input type="email" name="email" value= "<%= @email %>" required/>
   </label>
   <label for="password">
     Password:
