Ch23 - adds sign in and sessions

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -19,5 +19,5 @@
     Confirm Password:
     <input type="password" name="password_confirmation" />
   </label>
-  <input type="submit" name="sumbit" value="Signup">
+  <input type="submit" name="submit" value="Signup">
 </form>
