--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,8 +7,18 @@
   <body>
     <% if current_user %>
       Hi <%= current_user.first_name %>!
-    <% end %>
-    
+    <form method='post' action='/sessions'>
+    <input type='hidden' name="_method" value='delete'/>
+    <input type='submit' value='Sign out'/>
+    </form>
+  <% end %>
+
+  <% if flash[:notice] %>
+  <div id="notice">
+    <%= flash[:notice] %>
+  </div>
+  <% end %>
+
     <% if flash[:errors] && !flash[:errors].empty? %>
     <ul id="errors">
     <% flash[:errors].each do |error|  %>
@@ -16,6 +26,7 @@
     <% end %>
     </ul>
     <% end %>
+
     <%= yield %>
 
 
