--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -5,6 +5,8 @@
     <li>
       Title:  <%= link.title %>
       URL:    <%= link.url %>
+      Tags:   <%= link.tags %>
+      Tags:   <%= link.tags.map(&:name) %>
     </li>
   <% end %>
 </ul>
