improving signup workflow Ch#20

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,10 @@
     <% if current_user %>
     Welcome <%= current_user.email %>
     <%end %>
+    <% if flash[:notice] %>
+    <%= flash[:notice] %>
+    <%end %>
+
     <%= yield %>
   </body>
   </html>
