--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,5 @@
 <form action="/users" method="post">
-  <input type="text" name="email" value="<%=@user.email %>"/>
+  <input type="email" name="email" value="<%=@user.email %>" required/>
   <input type="password" name="password" />
   <input type="password_confirmation" name="password_confirmation" />
   <input type="submit" value="Sign up" />
